--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "miamirp-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "postinstall": "npm rebuild sqlite3"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
